Breakdown into repo pattern. apply shedular using firebase.

--- a/EmployeeLogManager/appsettings.json
+++ b/EmployeeLogManager/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Email": {
+    "Host": "smtp.ethereal.email",
+    "Port": "587",
+    "Username": "janiya.paucek@ethereal.email",
+    "Password": "pcyZpzVnUfmYyqFJTv"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
