--- a/EmployeeLogManager.BLL/EmployeeLogManager.BLL.csproj
+++ b/EmployeeLogManager.BLL/EmployeeLogManager.BLL.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.Core" Version="1.8.0" />
+    <PackageReference Include="MailKit" Version="4.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EmployeeLogManager.DAL\EmployeeLogManager.DAL.csproj" />
   </ItemGroup>
 
