--- a/EmployeeLogManager/EmployeeLogManager.csproj
+++ b/EmployeeLogManager/EmployeeLogManager.csproj
@@ -13,7 +13,9 @@
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.8.0" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.0" />
+    <PackageReference Include="Hangfire.Dashboard.BasicAuthorization" Version="1.0.2" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.8.0" />
+    <PackageReference Include="MailKit" Version="4.12.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
